sql/test/unit/checks/fail_select_from_table.exp
1
1
create table if not exists test(x integer);
^
|
 ----- ERROR
Error: line 1, character 0:
Constraint failed
